<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoestorenav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.eselman.android.shoestore.ui.fragments.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/actionLoginToWelcome"
            app:destination="@id/onboardingWelcomeFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/onboardingInstructionsFragment"
        android:name="com.eselman.android.shoestore.ui.fragments.onboarding.OnboardingInstructionsFragment"
        android:label="@string/instructions_fragment_title"
        tools:layout="@layout/fragment_onboarding_instructions" >
        <action
            android:id="@+id/actionInstructionsToShoesList"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_onboardingInstructionsFragment_to_shoesListFragment2"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_onboardingInstructionsFragment_to_shoesListFragment3"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_onboardingInstructionsFragment_to_shoesListFragment4"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_onboardingInstructionsFragment_to_shoesListFragment5"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/onboardingWelcomeFragment"
        android:name="com.eselman.android.shoestore.ui.fragments.onboarding.OnboardingWelcomeFragment"
        android:label="@string/welcome_fragment_title"
        tools:layout="@layout/fragment_onboarding_welcome" >
        <action
            android:id="@+id/actionWelcomeToInstructions"
            app:destination="@id/onboardingInstructionsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.eselman.android.shoestore.ui.fragments.shoes.ShoeDetailFragment"
        android:label="@string/shoe_details_fragment_title"
        tools:layout="@layout/fragment_shoe_detail" >
        <action
            android:id="@+id/actionGoToShoesList"
            app:destination="@id/shoesListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/shoesListFragment"
        android:name="com.eselman.android.shoestore.ui.fragments.shoes.ShoesListFragment"
        android:label="@string/shoes_list_fragment_title"
        tools:layout="@layout/fragment_shoes_list" >
        <action
            android:id="@+id/actionShoesListToShoeDetails"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/actionShoesListToLogin"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
</navigation>